feat: add styles for middle section and footer

--- a/style.css
+++ b/style.css
@@ -20,31 +20,30 @@
   flex-direction: column;
   background-image: url(fox-image.png);
 }
-
-.header {
+.top .header {
   display: flex;
   padding: 20px 0;
   justify-content: space-between;
 }
-.header .logo-container {
+.top .header .logo-container {
   display: flex;
   column-gap: 15px;
   align-items: center;
 }
-.header .logo-container .logo-text {
+.top .header .logo-container .logo-text {
   font-family: "Roboto", sans-serif;
   font-size: 32px;
   line-height: 60px;
   text-transform: uppercase;
   color: #F7F7F7;
 }
-.header .top-nav .top-nav-list {
+.top .header .top-nav .top-nav-list {
   list-style: none;
   display: flex;
   align-items: center;
-  column-gap: 60px;
+  column-gap: 65px;
 }
-.header .top-nav .top-nav-list .top-nav-list-item {
+.top .header .top-nav .top-nav-list .top-nav-list-item {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -52,16 +51,16 @@
   line-height: 60px;
   color: #F7F7F7;
 }
-.header .top-nav .top-nav-list .top-nav-list-item:hover {
+.top .header .top-nav .top-nav-list .top-nav-list-item:hover {
   cursor: pointer;
 }
-.header .top-nav .top-nav-list .top-nav-list-icon {
+.top .header .top-nav .top-nav-list .top-nav-list-icon {
   display: block;
 }
-.header .top-nav .top-nav-list .top-nav-list-icon img:hover {
+.top .header .top-nav .top-nav-list .top-nav-list-icon img:hover {
   cursor: pointer;
 }
-.header .top-nav .top-nav-list .top-nav-list-button {
+.top .header .top-nav .top-nav-list .top-nav-list-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,22 +68,27 @@
   height: 50px;
   border: 2px solid #CD6326;
   border-radius: 5px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 23px;
+  line-height: 27px;
+  color: #F7F7F7;
 }
-.header .top-nav .top-nav-list .top-nav-list-button:hover {
+.top .header .top-nav .top-nav-list .top-nav-list-button:hover {
   background-color: #CD6326;
   cursor: pointer;
 }
-.header .top-nav .top-nav-list .top-nav-list-button:active {
+.top .header .top-nav .top-nav-list .top-nav-list-button:active {
   background-color: #8F5613;
   border: 2px solid #8F5613;
   cursor: pointer;
 }
-
-.top-container .top-content {
+.top .top-container .top-content {
   margin: 100px 0 240px 0;
   max-width: 275px;
 }
-.top-container .top-content .top-title {
+.top .top-container .top-content .top-title {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -94,7 +98,7 @@
   color: #CD6326;
   margin-bottom: 50px;
 }
-.top-container .top-content .top-paragraph {
+.top .top-container .top-content .top-paragraph {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -103,7 +107,7 @@
   color: #F7F7F7;
   margin-bottom: 50px;
 }
-.top-container .top-content .top-button {
+.top .top-container .top-content .top-button {
   display: flex;
   width: 160px;
   height: 60px;
@@ -111,6 +115,204 @@
   align-items: center;
   background-color: #CD6326;
   border-radius: 5px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 23px;
+  line-height: 27px;
+  color: #F7F7F7;
+}
+.top .top-container .top-content .top-button:hover {
+  background-color: #E39128;
+  cursor: pointer;
+}
+.top .top-container .top-content .top-button:active {
+  background-color: #8F5613;
+  cursor: pointer;
+}
+
+.middle {
+  width: 100%;
+  padding: 120px 120px 240px 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #cccccc;
+}
+.middle .slider-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 240px;
+}
+.middle .slider-container .slider-title {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 48px;
+  line-height: 72px;
+  text-align: center;
+  color: #333333;
+  margin-bottom: 20px;
+}
+.middle .slider-container .slider-paragraph {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 36px;
+  text-align: center;
+  color: #666666;
+  margin-bottom: 120px;
+}
+.middle .slider-container .slider {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.middle .slider-container .slider .arrows {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+}
+.middle .slider-container .slider .arrows .arrow-left {
+  cursor: pointer;
+}
+.middle .slider-container .slider .arrows .arrow-right {
+  cursor: pointer;
+  transform: rotate(180deg);
+}
+.middle .slider-container .slider .slides {
+  display: flex;
+  column-gap: 60px;
+}
+.middle .slider-container .slider .slides .slide {
+  width: 300px;
+  height: 360px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 0 0 40px 0;
+  position: relative;
+}
+.middle .slider-container .slider .slides .slide .slide-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+.middle .slider-container .slider .slides .slide .slide-title {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 22px;
+  line-height: 36px;
+  text-align: center;
+  color: #F7F7F7;
+  margin-bottom: 10px;
+  z-index: 2;
+  cursor: pointer;
+}
+.middle .slider-container .slider .slides .slide .slide-description {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 17px;
+  line-height: 27px;
+  text-align: center;
+  color: #F7F7F7;
+  z-index: 2;
+  cursor: pointer;
+}
+.middle .subscribe-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.middle .subscribe-container .subscribe-title {
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 27px;
+  line-height: 40px;
+  text-align: center;
+  color: #333333;
+  margin-bottom: 60px;
+}
+.middle .subscribe-container .subscibe-form {
+  display: flex;
+}
+.middle .subscribe-container .subscibe-form .subscibe-form-area {
+  width: 540px;
+  height: 60px;
+  background: none;
+  border: 1px solid #666666;
+  padding: 0 15px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 23px;
+  line-height: 27px;
+  color: #666666;
+  border-radius: 5px 0px 0px 5px;
+}
+.middle .subscribe-container .subscibe-form .subscibe-form-area:hover {
+  cursor: text;
+}
+.middle .subscribe-container .subscibe-form .subscibe-form-button {
+  width: 120px;
+  height: 60px;
+  background-color: #CD6326;
+  border: none;
+  border-radius: 0px 5px 5px 0px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 23px;
+  line-height: 27px;
+  color: #F7F7F7;
+}
+.middle .subscribe-container .subscibe-form .subscibe-form-button:hover {
+  cursor: pointer;
+  background-color: #E39128;
+}
+.middle .subscribe-container .subscibe-form .subscibe-form-button:active {
+  cursor: pointer;
+  background-color: #8F5613;
+}
+
+.footer {
+  width: 100%;
+  padding: 150px 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url(leaves.jpg);
+}
+.footer .logo-container {
+  display: flex;
+  column-gap: 15px;
+  align-items: center;
+}
+.footer .logo-container .logo-text {
+  font-family: "Roboto", sans-serif;
+  font-size: 32px;
+  line-height: 60px;
+  text-transform: uppercase;
+  color: #F7F7F7;
+}
+.footer .bottom-nav .bottom-nav-list {
+  list-style: none;
+  display: flex;
+  column-gap: 85px;
+}
+.footer .bottom-nav .bottom-nav-list .bottom-nav-list-item {
   font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -118,12 +320,18 @@
   line-height: 60px;
   color: #F7F7F7;
 }
-.top-container .top-content .top-button:hover {
-  background-color: #E39128;
+.footer .bottom-nav .bottom-nav-list .bottom-nav-list-item:hover {
   cursor: pointer;
 }
-.top-container .top-content .top-button:active {
-  background-color: #8F5613;
+.footer .contacts .contacts-list {
+  list-style: none;
+  display: flex;
+  column-gap: 27px;
+}
+.footer .contacts .contacts-list .contacts-list-icon {
+  display: block;
+}
+.footer .contacts .contacts-list .contacts-list-icon img:hover {
   cursor: pointer;
 }
 
