--- a/style.sass
+++ b/style.sass
@@ -24,7 +24,7 @@ $bg-grey-color: #cccccc
 	padding: 0 120px
 	display: flex
 	flex-direction: column
-	background-image: url(fox-image.png)
+	background-image: url(assets/fox-image.png)
 
 	.header
 		display: flex
@@ -304,7 +304,7 @@ $bg-grey-color: #cccccc
 	display: flex
 	justify-content: space-between
 	align-items: center
-	background-image: url(leaves.jpg)
+	background-image: url(assets/leaves.jpg)
 
 	.logo-container
 			display: flex
