--- a/style.sass
+++ b/style.sass
@@ -11,6 +11,13 @@ $bg-grey-color: #cccccc
 	padding: 0
 	margin: 0
 	cursor: default
+
+a
+	text-decoration: none
+	color: currentcolor
+
+	&:hover
+		cursor: pointer
 	
 .wrapper
 	max-width: 1440px
@@ -24,7 +31,8 @@ $bg-grey-color: #cccccc
 	padding: 0 120px
 	display: flex
 	flex-direction: column
-	background-image: url(assets/fox-image.png)
+	background: url(assets/fox-image.png) center
+	background-size: cover
 
 	.header
 		display: flex
@@ -59,9 +67,6 @@ $bg-grey-color: #cccccc
 					line-height: 60px
 					color: $white
 
-					&:hover
-						cursor: pointer
-
 				.top-nav-list-icon
 					display: block
 
@@ -69,28 +74,31 @@ $bg-grey-color: #cccccc
 						cursor: pointer
 
 				.top-nav-list-button
-					display: flex
-					justify-content: center
-					align-items: center
-					width: 120px
-					height: 50px
-					border: 2px solid $orange
-					border-radius: 5px
-					font-family: 'Roboto', sans-serif
-					font-style: normal
-					font-weight: normal
-					font-size: 23px
-					line-height: 27px
-					color: $white
 
-					&:hover
-						background-color: $orange					
-						cursor: pointer
+					button
+						display: flex
+						justify-content: center
+						align-items: center
+						background-color: transparent
+						width: 120px
+						height: 50px
+						border: 2px solid $orange
+						border-radius: 5px
+						font-family: 'Roboto', sans-serif
+						font-style: normal
+						font-weight: normal
+						font-size: 23px
+						line-height: 27px
+						color: $white
+
+						&:hover
+							background-color: $orange					
+							cursor: pointer
 					
-					&:active					
-						background-color: $orange-pressed
-						border: 2px solid $orange-pressed
-						cursor: pointer
+						&:active					
+							background-color: $orange-pressed
+							border: 2px solid $orange-pressed
+							cursor: pointer
 
 
 	.top-container
@@ -125,6 +133,7 @@ $bg-grey-color: #cccccc
 				justify-content: center
 				align-items: center
 				background-color: $orange
+				border: none
 				border-radius: 5px
 				font-family: 'Roboto', sans-serif
 				font-style: normal
@@ -202,6 +211,7 @@ $bg-grey-color: #cccccc
 			.slides
 				display: flex
 				column-gap: 60px
+				overflow-x: hidden
 
 				.slide
 					width: 300px
@@ -241,6 +251,16 @@ $bg-grey-color: #cccccc
 						color: $white
 						z-index: 2
 						cursor: pointer
+
+				@media screen and ( max-width: 1439px )
+					
+					.slide-03
+						display: none
+
+				@media screen and ( max-width: 1079px )
+					
+					.slide-02
+						display: none
 
 	.subscribe-container
 		display: flex
@@ -304,7 +324,8 @@ $bg-grey-color: #cccccc
 	display: flex
 	justify-content: space-between
 	align-items: center
-	background-image: url(assets/leaves.jpg)
+	background: url(assets/leaves.jpg) center
+	background-size: cover
 
 	.logo-container
 			display: flex
@@ -335,6 +356,11 @@ $bg-grey-color: #cccccc
 
 				&:hover
 					cursor: pointer
+
+			@media screen and ( max-width: 1439px )
+				flex-direction: column
+				align-items: center
+
 
 	.contacts
 
